# Barberis_Eycken_VLSM_corrected_repo

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
ella_phd_vlsm_project/: __init__.py  dataset.py  features.py  plots.py
ella_phd_vlsm_project/ella_phd_vlsm_code/: __init__.py  constants.py
ella_phd_vlsm_project/ella_phd_vlsm_code/vlsm_analysis_dec24/: Lesion_distribution_calculation.py  Lesion_overlap_PDC_versionElla_NEW.py  VLSM_plotting.py  calculate_and_plot_corrected_VLSM.py  calculate_cluster_distribution.py  lesion_overlap_PDC_versionElla.py  lesion_overlap_PDC_versionElla_NOTNEEDED.py  plot_VLSM_output.py  plot_lesion_overlap.py  plotting-statistiek_PDC_versionElla.py  plotting-statistiek_PDC_versionElla_TOCLEAN.py
ella_phd_vlsm_project/modeling/: predict.py  train.py
