[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ella_phd_vlsm_project"
version = "0.0.1"
description = "This is Ella's project for VLSM analyses."
authors = [
  { name = "Ella E." },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["ella_phd_vlsm_project"]
force_sort_within_sections = true
